# evm-to-solana

./: .gitignore  README.md
contract/: .gitignore  .gitmodules  CLAUDE.md
contract/evm-staking/: .env.example  README.md
contract/evm-staking/src/: MyToken.sol  RestrictedStakingToken.sol  RewardToken.sol  Staking.sol
contract/evm-staking/test/: RestrictedStaking.t.sol  Staking.t.sol
contract/solana-staking/: Anchor.toml  DEPLOYMENT.md  package-lock.json
contract/solana-staking/scripts/: list-deployments.ts  verify-deployment.ts
evm-staking/: .gitignore  README.md  foundry.toml
evm-staking/script/: Deploy.s.sol
evm-staking/src/: MyToken.sol  RestrictedStakingToken.sol  Staking.sol
evm-staking/test/: RestrictedStaking.t.sol  Staking.t.sol
frontend/evm-dapp/: README.md  consts.ts  env.example  package.json  pnpm-lock.yaml
solana-staking/: Anchor.toml  DEPLOYMENT.md  README.md  create-codama-client.ts  package-lock.json  package.json  show-versions.sh  tsconfig.json
solana-staking/programs/solana-staking/: Cargo.toml
solana-staking/programs/solana-staking/src/: errors.rs  events.rs  lib.rs  state.rs  utils.rs
solana-staking/programs/solana-staking/src/instructions/: add_to_blacklist.rs  claim_rewards.rs  initialize.rs  mod.rs  remove_from_blacklist.rs  stake.rs  unstake.rs  utils.rs
solana-staking/scripts/: verify-deployment.ts
solana-staking/tests/: _setup.ts  blacklist.test.ts  helper.ts  solana-staking-kit.ts  solana-staking-litesvm.test.ts  solana-staking-native.ts  solana-staking.old.ts  solana-staking.test.ts  solana-staking.ts
(+18 files in other folders)
