[package]
name = "solana-staking"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_staking"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
proc-macro2 = "1.0.95"

# Suppress deprecation warnings from Anchor's generated code
# The #[program] macro in Anchor 0.31.1 generates code that uses the deprecated realloc() method
[lints.rust]
deprecated = "allow"
